Production/Utility/mqttutility/templates/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress  
metadata:  
  name: mqttutility-ingress 
  namespace: utility
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/service-upstream: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: platform.tpcloud.tech
      http:
        paths:
          - path: /mqttutility/(.*)
            pathType: Prefix
   
            backend:
   
              service:
   
                name: mqttutility-service
   
                port:
   
                  number: 31002
